[package]
name = "rust_db_indexing"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Web framework ---
axum = "0.7"
axum-macros = "0.3"

# --- Async runtime ---
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }

# --- Database ---
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "tls-rustls",
    "bigdecimal"
] }

# --- JSON & UUID & Time ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.2"
bigdecimal = "0.4.0"

# --- Config ---
config = "0.13.3"

# --- Logging / tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Error handling ---
thiserror = "1.0"
eyre = "0.6"
